--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,7 +57,7 @@ a {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: linear-gradient(120deg, #fff7c7, #159957); }
+  background-image: linear-gradient(120deg, #fff7c7, #aaffac); }
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -105,7 +105,9 @@ a {
     font-size: 1rem; } }
 
 .main-content :first-child {
-  margin-top: 0; }
+  margin-top: 0; 
+  background-image: linear-gradient(120deg, #aaffac, #fff7c7); }
+  
 .main-content img {
   max-width: 100%; }
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
