--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -105,8 +105,7 @@ a {
     font-size: 1rem; } }
 
 .main-content :first-child {
-  margin-top: 0; 
-  background-image: linear-gradient(120deg, #aaffac, #fff7c7); }
+  margin-top: 0; }
   
 .main-content img {
   max-width: 100%; }
