--- a/stylesheets/normalize.css
+++ b/stylesheets/normalize.css
@@ -182,7 +182,11 @@ sub {
  */
 
 img {
-  border: 0;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  max-width: 50%;
+  height: auto;
 }
 
 /**
