--- a/stylesheets/normalize.css
+++ b/stylesheets/normalize.css
@@ -182,8 +182,8 @@ sub {
  */
 
 img {
-  border: 1px solid #ddd;
-  border-radius: 4px;
+  <!--border: 1px solid #ddd;
+  border-radius: 4px;-->
   padding: 5px;
   max-width: 50%;
   height: auto;
