--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -114,12 +114,13 @@ a {
   margin-right: auto;}
 
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
-  margin-top: 2rem;
-  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   font-weight: normal;
-  color: #159957; }
+  color: #545e59;
+  background-color: #f3f6fa;}
 .main-content p {
-  margin-bottom: 1em; }
+  margin-bottom: 0.5em; }
 .main-content code {
   padding: 2px 4px;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
